fix alignment in select id page

--- a/styles/select.module.sass
+++ b/styles/select.module.sass
@@ -42,16 +42,16 @@
         .card
             display: flex
             align-items: center
+            justify-content: space-between
             margin-bottom: .7rem
-            padding: .5rem
+            padding: .5rem 1rem
             cursor: pointer
             font-size: .9rem
+            .company
+                display: flex
+                align-items: center
             .logo
                 width: 40px
                 margin-right: 1rem
             .name
                 margin-right: 1rem
-                flex-grow: 5
-            .details
-                justify-self: flex-end
-                flex-grow: 1
